# pd

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yaml  release.yml
npm/: index.js  package-lock.json  package.json  pnpm-lock.yaml
src/: main.rs
tests/: pd.sh
