[package]
name = "pd"
version = "0.1.0"
authors = ["jiangWeixian <jiangweixian1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skim = "0.9.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
globwalk = "0.8.1"
dirs = "4.0.0"